Add compliance profile
+ Delete unneeded file.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,6 +7,8 @@ provisioner:
 
 verifier:
   name: inspec
+  inspec_tests:
+    - compliance://cis/cis-centos7-level1
 
 platforms:
   - name: centos-7.2
